gccida/c2/binary_op_error
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/binary_op_error/src/c-common.c:2041:24: error: must use 'enum' tag to refer to type 'tree_code'
void  binary_op_error( tree_code code) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/binary_op_error/src/c-common.c:2065:6: error: use of undeclared identifier 'off_67BF48'
v1 = off_67BF48; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/binary_op_error/src/obj/c-common.o] Error 1
